Crated sidebar for main websites

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styles-login-register.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Megrim">
     <title>Login</title>
 </head>
@@ -11,16 +11,16 @@
     <div class="container">
         <div class="content">
             <div class="logo">
-                <img src="../images/logo.svg" alt="logo - flower">
+                <img src="public/images/logo.svg" alt="logo flower">
                 <div class="name">Bloom</div>
             </div>
             <div class="inputs">
-                <form class="login">
+                <form class="login-form">
                     <input name="username" type="text" placeholder="Username">
                     <input name="password" type="password" placeholder="Password">
                     <button class="login-btn">Login</button>
                 </form>
-                <a class="bottom" href="register.html">I don't have an account</a>
+                <a class="account" href="register">I don't have an account</a>
             </div>
         </div>
     </div>
