--- a/public/views/register.html
+++ b/public/views/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styles-login-register.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Megrim">
     <title>Register</title>
 </head>
@@ -12,14 +12,14 @@
         <div class="content">
             <div class="inputs">
                 <div class="name">Bloom</div>
-                <form class="register">
+                <form class="register-form">
                     <input name="username" type="text" placeholder="Username">
                     <input name="email" type="email" placeholder="Email@email.com">
                     <input name="password" type="password" placeholder="Password">
                     <input name="password" type="password" placeholder="Password">
                     <button class="login-btn">Register</button>
                 </form>
-                <a class="bottom" href="login.html">I have an account</a>
+                <a class="account" href="login">I have an account</a>
             </div>
         </div>
     </div>
