--- a/public/css/styles-login-register.css
+++ b/public/css/styles-login-register.css
@@ -2,6 +2,7 @@
 :root {
     --black: #000000;
     --red: #FF0C63;
+    --white: #FFFFFF;
 }
 
 * {
@@ -15,9 +16,8 @@ body {
 }
 
 .container {
-    max-width: 100vw;
-    max-height: 100vh;
     height: 100vh;
+    width: 100vw;
     background: var(--black);
     display: flex;
     justify-content: center;
@@ -26,11 +26,8 @@ body {
 
 .content {
     display: flex;
-    gap: 120px;
-}
-
-.logo {
-    max-width: 472px;
+    justify-content: center;
+    gap: 100px;
 }
 
 img {
@@ -39,9 +36,8 @@ img {
 }
 
 .name {
-    width: 100%;
     text-align: center;
-    font-size: 116px;
+    font-size: 6.5rem;
 }
 
 .inputs {
@@ -49,28 +45,18 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 32px;
+    gap: 24px;
 }
 
-.login, .register {
+.login-form, .register-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 48px;
-}
-
-.login {
-    max-width: 446px;
-}
-
-.register {
-    min-width: 644px;
-    gap: 34px;
+    gap: 36px;
 }
 
 input {
     background: transparent;
-    padding: 0;
     outline: none;
 }
 
@@ -80,20 +66,15 @@ input {
 }
 
 input, .login-btn {
-    max-width: 100%;
     border-radius: 40px;
     border: 3px solid var(--red);
-    font-size: 56px;
+    font-size: 3.5rem;
     height: 96px;
+    padding: 0;
 }
 
-.register input, .register .login-btn{
-    height: 84px;
-    font-size: 48px;
-}
-
-.bottom {
-    font-size: 24px;
+.account {
+    font-size: 1.5rem;
     text-decoration: none;
     border-radius: 20px;
     padding: 12px;
@@ -118,7 +99,7 @@ input:focus {
     background: var(--black);
 }
 
-.bottom:hover {
+.account:hover {
     color: var(--black);
     background: var(--red);
 }
@@ -128,42 +109,31 @@ input:focus {
         align-items: center;
         flex-direction: column;
         height: unset;
-        width: 90%;
         gap: 14px;
     }
 
-    .logo {
-        width: 202px;
-    }
-
     .name {
-        font-size: 64px;
+        font-size: 4rem;
     }
 
     .inputs {
         gap: 12px;
     }
 
-    .login, .register {
-        width: 267px;
+    .login-form, .register-form {
         gap: 22px;
     }
 
-    .register {
+    .register-form {
         min-width: unset;
     }
 
     input, .login-btn {
-        font-size: 36px;
+        font-size: 2rem;
         height: 58px;
     }
 
-    .register input, .register .login-btn{
-        height: 52px;
-        font-size: 28px;
-    }
-
-    .bottom {
-        font-size: 18px;
+    .account {
+        font-size: 1.2rem;
     }
 }
