--- a/public/views/garden.html
+++ b/public/views/garden.html
@@ -12,30 +12,42 @@
     <div class="sidebar">
         <div class="name">Bloom</div>
         <div class="options">
-            <div class="option active">
-                <img src="public/images/garden.svg" alt="garden icon">
-                <a href="garden">Garden</a>
-            </div>
-            <div class="option">
-                <img src="public/images/plant.svg" alt="add plant icon">
-                <a href="addPlant">Add plant</a>
-            </div>
-            <div class="option">
-                <img src="public/images/search.svg" alt="search icon">
-                <a href="search">Search</a>
-            </div>
-            <div class="option">
-                <img src="public/images/friends.svg" alt="friends icon">
-                <a href="friends">Friends</a>
-            </div>
-            <div class="option">
-                <img src="public/images/profile.svg" alt="profile icon">
-                <a href="profile">Profile</a>
-            </div>
-            <div class="option">
-                <img src="public/images/logout.svg" alt="logout icon">
-                <a href="login">Logout</a>
-            </div>
+            <a href="garden">
+                <div class="option active">
+                    <img src="public/images/garden.svg" alt="garden icon">
+                    <div>Garden</div>
+                </div>
+            </a>
+            <a href="addPlant">
+                <div class="option">
+                    <img src="public/images/plant.svg" alt="add plant icon">
+                    <div>Add plant</div>
+                </div>
+            </a>
+            <a href="search">
+                <div class="option">
+                    <img src="public/images/search.svg" alt="search icon">
+                    <div>Search</div>
+                </div>
+            </a>
+            <a href="friends">
+                <div class="option">
+                    <img src="public/images/friends.svg" alt="friends icon">
+                    <div>Friends</div>
+                </div>
+            </a>
+            <a href="profile">
+                <div class="option">
+                    <img src="public/images/profile.svg" alt="profile icon">
+                    <div>Profile</div>
+                </div>
+            </a>
+            <a href="login">
+                <div class="option">
+                    <img src="public/images/logout.svg" alt="logout icon">
+                    <div>Logout</div>
+                </div>
+            </a>
         </div>
     </div>
     <div class="main"></div>
