--- a/public/views/addPlant.html
+++ b/public/views/addPlant.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="public/css/styles-profile.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Megrim">
-  <title>Add plant</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="public/css/styles-profile.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Megrim">
+    <title>Garden</title>
 </head>
 <body>
 <div class="container">
-  <div class="sidebar">
-    <div class="name">Bloom</div>
-    <div class="options">
-      <div class="option">
-        <img src="public/images/garden.svg" alt="garden icon">
-        <a href="garden">Garden</a>
-      </div>
-      <div class="option active">
-        <img src="public/images/plant.svg" alt="add plant icon">
-        <a href="add-addPlant">Add plant</a>
-      </div>
-      <div class="option">
-        <img src="public/images/search.svg" alt="search icon">
-        <a href="search">Search</a>
-      </div>
-      <div class="option">
-        <img src="public/images/friends.svg" alt="friends icon">
-        <a href="friends">Friends</a>
-      </div>
-      <div class="option">
-        <img src="public/images/profile.svg" alt="profile icon">
-        <a href="profile">Profile</a>
-      </div>
-      <div class="option">
-        <img src="public/images/logout.svg" alt="logout icon">
-        <a href="login">Logout</a>
-      </div>
+    <div class="sidebar">
+        <div class="name">Bloom</div>
+        <div class="options">
+            <a href="garden">
+                <div class="option">
+                    <img src="public/images/garden.svg" alt="garden icon">
+                    <div>Garden</div>
+                </div>
+            </a>
+            <a href="addPlant">
+                <div class="option active">
+                    <img src="public/images/plant.svg" alt="add plant icon">
+                    <div>Add plant</div>
+                </div>
+            </a>
+            <a href="search">
+                <div class="option">
+                    <img src="public/images/search.svg" alt="search icon">
+                    <div>Search</div>
+                </div>
+            </a>
+            <a href="friends">
+                <div class="option">
+                    <img src="public/images/friends.svg" alt="friends icon">
+                    <div>Friends</div>
+                </div>
+            </a>
+            <a href="profile">
+                <div class="option">
+                    <img src="public/images/profile.svg" alt="profile icon">
+                    <div>Profile</div>
+                </div>
+            </a>
+            <a href="login">
+                <div class="option">
+                    <img src="public/images/logout.svg" alt="logout icon">
+                    <div>Logout</div>
+                </div>
+            </a>
+        </div>
     </div>
-  </div>
-  <div class="main"></div>
+    <div class="main"></div>
 </div>
 </body>
 </html>
