Added content to search and friends page

--- a/public/views/search.html
+++ b/public/views/search.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="public/css/styles-profile.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styles-sidebar.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styles-friends-search.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Megrim">
     <title>Search</title>
 </head>
@@ -44,7 +45,94 @@
             </a>
         </div>
     </div>
-    <div class="main"></div>
+    <div class="main">
+        <form class="search-bar">
+            <input name="search" type="text" placeholder="Search">
+            <button type="submit"><img src="public/images/search.svg" alt="search icon"></button>
+        </form>
+        <div class="people">
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+            <div class="person">
+                <img src="public/images/test-face.jpg" alt="face">
+                <div>Mark Johnson</div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
