--- a/public/views/login.html
+++ b/public/views/login.html
@@ -18,7 +18,7 @@
                 <form class="login-form">
                     <input name="username" type="text" placeholder="Username">
                     <input name="password" type="password" placeholder="Password">
-                    <button class="login-btn">Login</button>
+                    <button class="login-btn" type="submit">Login</button>
                 </form>
                 <a class="account" href="register">I don't have an account</a>
             </div>
