--- a/public/views/register.html
+++ b/public/views/register.html
@@ -17,7 +17,7 @@
                     <input name="email" type="email" placeholder="Email@email.com">
                     <input name="password" type="password" placeholder="Password">
                     <input name="password" type="password" placeholder="Password">
-                    <button class="login-btn">Register</button>
+                    <button class="login-btn" type="submit">Register</button>
                 </form>
                 <a class="account" href="login">I have an account</a>
             </div>
