Added file upload to server

--- a/public/css/styles-sidebar.css
+++ b/public/css/styles-sidebar.css
@@ -96,6 +96,10 @@ body {
         flex-direction: row;
     }
 
+    .option {
+        padding-right: 0;
+    }
+
     .option img {
         height: 42px;
     }
