--- a/public/css/styles-garden.css
+++ b/public/css/styles-garden.css
@@ -11,13 +11,25 @@
 }
 
 .main {
+    width: 100%;
+    height: 100%;
     grid-column: 2 / 5;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+}
+
+.top-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    overflow-y: scroll;
+    gap: 30px;
+    color: var(--black);
+}
+
+.top-bar a {
+    text-decoration: none;
 }
 
 .search-bar {
@@ -53,44 +65,31 @@
     filter: invert(0%) sepia(0%) saturate(18%) hue-rotate(293deg) brightness(95%) contrast(105%);
 }
 
-.people {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 40px;
-    padding: 0 30px 30px;
-    box-sizing: border-box;
-}
-
-.person {
-    height: 300px;
-    border: solid 2px var(--white);
-    display: flex;
-    flex-direction: column;
-    border-radius: 25px;
-}
-
-.person img {
-    width: 100%;
-    height: 80%;
-    object-fit: cover;
-    border-radius: 23px 23px 0 0;
-}
-
-.person div {
-    height: 20%;
+.add-photo {
+    height: 60px;
+    font-size: 2rem;
+    background-color: var(--red);
+    color: var(--black);
+    border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--white);
-    border-top: solid 2px var(--white);
-    font-size: 1.4rem;
+    gap: 10px;
+    padding: 0 8px;
+}
+
+.add-photo img {
+    height: 100%;
 }
 
 @media (max-width: 1150px) {
+    .top-bar {
+        gap: 16px;
+    }
+
     .search-bar {
         height: 50px;
-        width: 85%;
+        width: 60%;
         margin: 20px 0;
     }
 
@@ -98,17 +97,11 @@
         font-size: 1.8rem;
     }
 
-    .people {
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 20px;
-        padding: 0 25px 25px;
+    .add-photo {
+        height: 50px;
     }
 
-    .person {
-        height: 250px;
-    }
-
-    .person div {
-        font-size: 1.1rem;
+    .add-photo div {
+        display: none;
     }
 }
