Added form validation and ability to display photos in garden

--- a/public/css/styles-login-register.css
+++ b/public/css/styles-login-register.css
@@ -94,7 +94,7 @@ input, .login-btn {
     text-align: center;
 }
 
-input:invalid {
+.no-valid {
     background-color: var(--red);
     color: var(--black);
 }
