--- a/public/css/styles-garden.css
+++ b/public/css/styles-garden.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
 }
 
 .top-bar {
@@ -80,6 +81,43 @@
 
 .add-photo img {
     height: 100%;
+}
+
+.photos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 36px;
+    width: 90%;
+}
+
+.photo {
+    height: 400px;
+    background: var(--white);
+    border-radius: 20px;
+}
+
+.photo img {
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+}
+
+.photos .name, .photos.description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.photos .name {
+    color: var(--red);
+    font-size: 2rem;
+}
+
+.photos .description {
+    font-size: 1.2rem;
+    padding: 8px 16px;
+    overflow: hidden;
 }
 
 @media (max-width: 1150px) {
