Removed unused pages

--- a/public/css/styles-garden.css
+++ b/public/css/styles-garden.css
@@ -20,6 +20,12 @@
     overflow-y: scroll;
 }
 
+.top-name {
+    color: var(--red);
+    font-size: 4.5rem;
+    margin: 20px 0;
+}
+
 .title {
     color: var(--red);
     font-size: 4.5rem;
