--- a/public/css/styles-photos.css
+++ b/public/css/styles-photos.css
@@ -10,22 +10,6 @@
     box-sizing: border-box;
 }
 
-.main {
-    width: 100%;
-    height: 100%;
-    grid-column: 2 / 5;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: scroll;
-}
-
-.title {
-    color: var(--red);
-    font-size: 4.5rem;
-    margin: 30px 0;
-}
-
 .photos {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -61,4 +45,24 @@
     font-size: 1.2rem;
     padding: 8px 16px;
     overflow: hidden;
+}
+
+@media (max-width: 1150px) {
+    .photos {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .photo {
+        height: 200px;
+    }
+
+    .photos .name {
+        font-size: 1.5rem;
+    }
+
+    .photos .description {
+        font-size: 1rem;
+        padding: 8px 16px;
+        overflow: hidden;
+    }
 }
