--- a/public/css/styles-sidebar.css
+++ b/public/css/styles-sidebar.css
@@ -36,6 +36,16 @@ body {
     gap: 32px;
 }
 
+.main {
+    grid-column: 2 / 5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    overflow-y: scroll;
+}
+
 .name {
     font-size: 6rem;
 }
