--- a/public/css/styles-topbar.css
+++ b/public/css/styles-topbar.css
@@ -64,6 +64,7 @@
 
 .add-photo {
     height: 60px;
+    min-width: 180px;
     font-size: 2rem;
     background-color: var(--red);
     color: var(--black);
@@ -80,13 +81,18 @@
 }
 
 @media (max-width: 1150px) {
+    .top-name {
+        font-size: 2.5rem;
+        margin: 16px;
+    }
+
     .top-bar {
         gap: 16px;
     }
 
     .search-bar {
         height: 50px;
-        width: 60%;
+        width: 65%;
         margin: 20px 0;
     }
 
@@ -95,6 +101,7 @@
     }
 
     .add-photo {
+        min-width: unset;
         height: 50px;
     }
 
