--- a/public/css/styles-login-register.css
+++ b/public/css/styles-login-register.css
@@ -12,17 +12,18 @@
 
 body {
     margin: 0;
-    height: 100%;
-    overflow: hidden;
+    min-height: 100%;
+    overflow-x: hidden;
 }
 
 .container {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background: var(--black);
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow-y: auto;
 }
 
 .content {
