--- a/public/css/styles-sidebar.css
+++ b/public/css/styles-sidebar.css
@@ -43,7 +43,8 @@ body {
     align-items: center;
     height: 100%;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
+    padding-bottom: 16px;
 }
 
 .name {
