--- a/public/css/styles-login-register.css
+++ b/public/css/styles-login-register.css
@@ -47,7 +47,7 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 24px;
+    gap: 12px;
 }
 
 .messages {
@@ -55,13 +55,13 @@ img {
     align-items: center;
     justify-content: center;
     font-size: 1.5rem;
-    padding: 12px;
 }
 
 .login-form, .register-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 12px;
     gap: 36px;
 }
 
@@ -78,9 +78,8 @@ input {
 input, .login-btn {
     border-radius: 40px;
     border: 3px solid var(--red);
-    font-size: 3.5rem;
-    height: 96px;
-    padding: 0;
+    font-size: 3rem;
+    height: 80px;
 }
 
 .account {
