--- a/public/css/styles-pending.css
+++ b/public/css/styles-pending.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 0 30px 30px;
+    padding-bottom: 30px;
     box-sizing: border-box;
 }
 
