--- a/public/css/styles-sidebar.css
+++ b/public/css/styles-sidebar.css
@@ -44,7 +44,7 @@ body {
     height: 100%;
     width: 100%;
     overflow-y: auto;
-    padding-bottom: 16px;
+    padding: 0 100px 16px;
 }
 
 .name {
