--- a/public/css/styles-topbar.css
+++ b/public/css/styles-topbar.css
@@ -32,7 +32,7 @@
 
 .search-bar {
     height: 60px;
-    width: 70%;
+    width: 75%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,7 +42,7 @@
 }
 
 .single {
-    width: 85%;
+    width: 100%;
 }
 
 .search-bar input {
@@ -66,9 +66,14 @@
     filter: invert(0%) sepia(0%) saturate(18%) hue-rotate(293deg) brightness(95%) contrast(105%);
 }
 
+.top-bar a {
+    width: 25%;
+    min-width: 200px;
+}
+
 .add-photo {
     height: 60px;
-    min-width: 180px;
+    /*width: 100%;*/
     font-size: 2rem;
     background-color: var(--red);
     color: var(--black);
