Fix upload form

--- a/public/css/styles-users.css
+++ b/public/css/styles-users.css
@@ -58,7 +58,7 @@
     font-size: 1.5rem;
 }
 
-.person button.added {
+.person button:hover, .person button.added {
     background: var(--black);
     border: var(--red) 2px solid;
     color: var(--red);
