--- a/public/css/styles-pending.css
+++ b/public/css/styles-pending.css
@@ -60,6 +60,12 @@
     font-size: 1.5rem;
 }
 
+.person button:hover {
+    color: var(--red);
+    background: var(--black);
+    border: 2px var(--red) solid;
+}
+
 @media (max-width: 1150px) {
     .people {
         grid-template-columns: repeat(2, 1fr);
