--- a/public/css/styles-users.css
+++ b/public/css/styles-users.css
@@ -64,6 +64,12 @@
     color: var(--red);
 }
 
+@media (max-width: 1600px) {
+    .people {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
 @media (max-width: 1150px) {
     .people {
         grid-template-columns: repeat(2, 1fr);
